@@ -1,3 +1,8 @@
+2005-10-11  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-prefs.c:
+	Protect against FileChooserButton returning a NULL path (#317999)
+
 2005-10-07  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
